# QuadBTraining

./: .gitignore
Authentication/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Authentication/src/Authentication_backend/: Cargo.toml
Authentication/src/Authentication_frontend/: package.json
Authentication/src/Authentication_frontend/src/: App.jsx
CrossCanisterCommunication/comm/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
ICP-Task1/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
ICP-Task1/src/ICP-Task1-backend/: Cargo.toml  ICP-Task1-backend.did
ICP-Task1/src/ICP-Task1-frontend/: package.json
Poll/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Poll/src/Poll_backend/: Cargo.toml  Poll_backend.did
Poll/src/Poll_frontend/: package.json
Todo_List_Canister/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Todo_List_Canister/src/Todo_List_Canister_backend/: Cargo.toml  Todo_List_Canister_backend.did
Todo_List_Canister/src/Todo_List_Canister_frontend/: package.json
Todo_auth_ICP/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Todo_auth_ICP/src/Todo_auth_ICP_backend/: Cargo.toml  Todo_auth_ICP_backend.did
Todo_auth_ICP/src/Todo_auth_ICP_backend/src/: lib.rs
Todo_auth_ICP/src/Todo_auth_ICP_frontend/: package.json
persistentCounterCanister/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
persistentCounterCanister/src/persistentCounterCanister_backend/: Cargo.toml  persistentCounterCanister_backend.did
(+21 files in other folders)
