[package]
name = "Todo_auth_ICP_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
chrono = "0.4.40"
ic-cdk = "0.17"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.7"
regex = "1.11.1"
serde = "1.0.218"